Bug Fix: remove card margins added in previous commit on mobile widths

--- a/static/styles.css
+++ b/static/styles.css
@@ -724,6 +724,8 @@ footer h4 {
 	main article {
 		width: 100%;
 		margin-bottom: 0px;
+		margin-left: 0px;
+		margin-right: 0px;
 	}
 	main {
 		padding-left: 0px;
